--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -46,7 +46,8 @@ Not going to get much done this week. Just do a little editing and working on vi
 ### () - WED 11/23/2022
 <!-- edit/new -->
 * (done) edit: threejs-object3d-position - proof read opening, getting started, #1
-* () edit: threejs-fog - proof read section1
+* (done) edit: threejs-fog - proof read section1
+* () edit: threejs-fog - proof read section2
 
 * () forpost: threejs-examples-menus - more than one demo of module
 <!-- Beta World -->
