--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -48,7 +48,7 @@ Not going to get much done this week. Just do a little editing and working on vi
 * (done) edit: threejs-object3d-position - proof read opening, getting started, #1
 * (done) edit: threejs-fog - proof read section1
 * (done) edit updated s2 section for basic example
-* () edit: threejs-fog - proof read section2
+* (done) edit: threejs-fog - proof read section2
 
 * () forpost: threejs-examples-menus - more than one demo of module
 <!-- Beta World -->
