--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -38,18 +38,11 @@ Not going to get much done this week. Just do a little editing and working on vi
 * () start post #1015 on threejs-electronjs-examples-file-manager
 
 ### () - THU 11/24/2022
+* (done) electionjs fm proto: worked on win32 actions
 <!-- edit/new -->
 * () edit: threejs-object3d-position - proof read #2 parent child
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
-
-### () - WED 11/23/2022
-<!-- edit/new -->
-* (done) edit: threejs-object3d-position - proof read opening, getting started, #1
-* (done) edit: threejs-fog - proof read section1
-* (done) edit updated s2 section for basic example
-* (done) edit: threejs-fog - proof read section2
-
 * () forpost: threejs-examples-menus - more than one demo of module
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
@@ -57,11 +50,18 @@ Not going to get much done this week. Just do a little editing and working on vi
 <!-- electionjs fm proto -->
 * () start a 'js' actions collection 
 * () pull the actions object into its own javaScript file
-* () work on win32 actions
+
 <!-- test_threejs / new / edit-->
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
+
+### () - WED 11/23/2022
+<!-- edit/new -->
+* (done) edit: threejs-object3d-position - proof read opening, getting started, #1
+* (done) edit: threejs-fog - proof read section1
+* (done) edit updated s2 section for basic example
+* (done) edit: threejs-fog - proof read section2
 
 ### () - TUE 11/22/2022
 * (done) edit: threejs-examples-menus - proof read opening
