--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,8 +39,8 @@ Not going to get much done this week. Just do a little editing and working on vi
 
 ### () - THU 11/24/2022
 * (done) electionjs fm proto: worked on win32 actions
+* (done) edit: threejs-object3d-position - proof read #2 parent child
 <!-- edit/new -->
-* () edit: threejs-object3d-position - proof read #2 parent child
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
