--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,14 +33,9 @@ POST                                                        CLICKS  IMPRESSIONS
 Not going to get much done this week. Just do a little editing and working on video templates. new post this week can be on my file manager electionjs app that I all ready have together.
 
 ### () - SAT 11/26/2022
-
-### () - FRI 11/25/2022
-* () start post #1015 on threejs-electronjs-example-file-manager
-
-### () - THU 11/24/2022
-* (done) electionjs fm proto: worked on win32 actions
-* (done) edit: threejs-object3d-position - proof read #2 parent child
 <!-- edit/new -->
+* () edit: threejs-electronjs-example-file-manager - finish the post
+
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
@@ -55,6 +50,14 @@ Not going to get much done this week. Just do a little editing and working on vi
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
+
+### () - FRI 11/25/2022
+* (done) start post #1015 on threejs-electronjs-example-file-manager
+
+### () - THU 11/24/2022
+* (done) electionjs fm proto: worked on win32 actions
+* (done) edit: threejs-object3d-position - proof read #2 parent child
+
 
 ### () - WED 11/23/2022
 <!-- edit/new -->
