--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,7 +34,7 @@ Not going to get much done this week. Just do a little editing and working on vi
 
 ### () - SAT 11/26/2022
 <!-- edit/new -->
-* () edit: threejs-electronjs-example-file-manager - finish the post
+* (done) edit: threejs-electronjs-example-file-manager - finish the post
 
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
