--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -26,6 +26,26 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 <!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 11/27/2022 - WED 11/30/2022
+
+### () - SUN 11/26/2022
+<!-- edit/new -->
+* () edit: threejs-object3d-scale - proof read intro
+
+* () edit: threejs-object3d-position - proof read #3 Curves
+* () edit: threejs-object3d-position - proof read #4 Determ
+* () forpost: threejs-examples-menus - more than one demo of module
+* () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
+* () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
+* () link to new threejs-examples-curves-module from curve posts
+<!-- Beta World -->
+* () template5: make sample alphas part of the stack
+* () start first guy video
+<!-- electionjs fm proto -->
+
+<!-------- ----------
 -- WEEK 4
 ---------- --------->
 ## () - WEEK 4 - SUN 11/10/2022 - SAT 11/26/2022
@@ -33,25 +53,10 @@ POST                                                        CLICKS  IMPRESSIONS
 Not going to get much done this week. Just do a little editing and working on video templates. new post this week can be on my file manager electionjs app that I all ready have together.
 
 ### () - SAT 11/26/2022
-<!-- edit/new -->
 * (done) edit: threejs-electronjs-example-file-manager - finish the post
 * (done) edit: threejs-vector3-apply-axis-angle - video1 for post done
-* () edit: threejs-vector3-apply-axis-angle - write more about new demo
-
-* () edit: threejs-object3d-position - proof read #3 Curves
-* () edit: threejs-object3d-position - proof read #4 Determ
-* () forpost: threejs-examples-menus - more than one demo of module
-<!-- Beta World -->
-* () template5: make sample alphas part of the stack
-* () start first guy video
-<!-- electionjs fm proto -->
-* () start a 'js' actions collection 
-* () pull the actions object into its own javaScript file
-
-<!-- test_threejs / new / edit-->
-* () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
-* () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
-* () link to new threejs-examples-curves-module from curve posts
+* (done) edit: threejs-vector3-apply-axis-angle - write more about new demo
+* (done) pull the actions object into its own javaScript file
 
 ### () - FRI 11/25/2022
 * (done) start post #1015 on threejs-electronjs-example-file-manager
