--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,7 +32,9 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - SUN 11/26/2022
 <!-- edit/new -->
-* () edit: threejs-object3d-scale - proof read intro
+* (done) edit: threejs-object3d-scale - proof read opening
+* () edit: threejs-object3d-scale - proof read getting started section
+
 
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
