--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,8 +33,14 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - SUN 11/26/2022
 <!-- edit/new -->
 * (done) edit: threejs-object3d-scale - proof read opening
-* () edit: threejs-object3d-scale - proof read getting started section
+* (done) edit: threejs-object3d-scale - proof read getting started section
 
+* () forpost: threejs-object3d-scale - update examples
+
+* () edit: threejs-object3d-scale - proof read #1
+* () edit: threejs-object3d-scale - proof read #2
+* () edit: threejs-object3d-scale - proof read #3
+* () edit: threejs-object3d-scale - proof read concusion
 
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
