--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -31,12 +31,10 @@ POST                                                        CLICKS  IMPRESSIONS
 ## () - WEEK 5 - SUN 11/27/2022 - WED 11/30/2022
 
 ### () - SUN 11/26/2022
-<!-- edit/new -->
 * (done) edit: threejs-object3d-scale - proof read opening
 * (done) edit: threejs-object3d-scale - proof read getting started section
-
-* () forpost: threejs-object3d-scale - update examples
-
+* (done) forpost: threejs-object3d-scale - update examples
+<!-- edit/new -->
 * () edit: threejs-object3d-scale - proof read #1
 * () edit: threejs-object3d-scale - proof read #2
 * () edit: threejs-object3d-scale - proof read #3
