--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,12 +34,11 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-scale - proof read opening
 * (done) edit: threejs-object3d-scale - proof read getting started section
 * (done) forpost: threejs-object3d-scale - update examples
+* (done) edit: threejs-object3d-scale - proof read #1
+* (done) edit: threejs-object3d-scale - proof read #2
+* (done) edit: threejs-object3d-scale - proof read #3
+* (done) edit: threejs-object3d-scale - proof read concusion
 <!-- edit/new -->
-* () edit: threejs-object3d-scale - proof read #1
-* () edit: threejs-object3d-scale - proof read #2
-* () edit: threejs-object3d-scale - proof read #3
-* () edit: threejs-object3d-scale - proof read concusion
-
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
