--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -30,7 +30,12 @@ POST                                                        CLICKS  IMPRESSIONS
 ---------- --------->
 ## () - WEEK 5 - SUN 11/27/2022 - WED 11/30/2022
 
-### () - SUN 11/26/2022
+### () - MON 11/28/2022
+<!-- edit/new -->
+* () for post: threejs-object3d-scale - scale geo example
+* () edit: threejs-object3d-scale - write about new scale geo example
+
+### () - SUN 11/27/2022
 * (done) edit: threejs-object3d-scale - proof read opening
 * (done) edit: threejs-object3d-scale - proof read getting started section
 * (done) forpost: threejs-object3d-scale - update examples
@@ -39,6 +44,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-scale - proof read #3
 * (done) edit: threejs-object3d-scale - proof read concusion
 <!-- edit/new -->
+* () edit: threejs-object3d-scale - write about new basic examples
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
