--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,8 +43,8 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-scale - proof read #2
 * (done) edit: threejs-object3d-scale - proof read #3
 * (done) edit: threejs-object3d-scale - proof read concusion
+* (done) edit: threejs-object3d-scale - write about new basic examples
 <!-- edit/new -->
-* () edit: threejs-object3d-scale - write about new basic examples
 * () edit: threejs-object3d-position - proof read #3 Curves
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
