--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -44,8 +44,12 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-scale - proof read #3
 * (done) edit: threejs-object3d-scale - proof read concusion
 * (done) edit: threejs-object3d-scale - write about new basic examples
+* (done) edit: threejs-object3d-position - proof read #3 Curves
+
 <!-- edit/new -->
-* () edit: threejs-object3d-position - proof read #3 Curves
+* () forpost: threejs-object3d-position - new basic curves example
+* () edit: threejs-object3d-position - write about new basic curves example
+
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
