--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,6 +34,8 @@ POST                                                        CLICKS  IMPRESSIONS
 <!-- edit/new -->
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
+* () edit: threejs-object3d-position - proof read #4 Determ
+* () forpost: threejs-examples-menus - more than one demo of module
 
 ### () - SUN 11/27/2022
 * (done) edit: threejs-object3d-scale - proof read opening
@@ -45,13 +47,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-scale - proof read concusion
 * (done) edit: threejs-object3d-scale - write about new basic examples
 * (done) edit: threejs-object3d-position - proof read #3 Curves
-
+* (done) forpost: threejs-object3d-position - new basic curves example
+* (done) edit: threejs-object3d-position - write about new basic curves example
 <!-- edit/new -->
-* () forpost: threejs-object3d-position - new basic curves example
-* () edit: threejs-object3d-position - write about new basic curves example
-
-* () edit: threejs-object3d-position - proof read #4 Determ
-* () forpost: threejs-examples-menus - more than one demo of module
+* () link to new threejs-examples-curves-module from threejs-object3d-position
 * () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * () link to new threejs-examples-curves-module from curve posts
