--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -49,11 +49,12 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-position - proof read #3 Curves
 * (done) forpost: threejs-object3d-position - new basic curves example
 * (done) edit: threejs-object3d-position - write about new basic curves example
+* (done) link to new threejs-examples-curves-module from threejs-object3d-position
+* (done) link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
+* (done) link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
+* (done) link to new threejs-examples-curves-module from curve posts
 <!-- edit/new -->
-* () link to new threejs-examples-curves-module from threejs-object3d-position
-* () link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
-* () link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
-* () link to new threejs-examples-curves-module from curve posts
+
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
