--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,11 +32,14 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - MON 11/28/2022
 <!-- edit/new -->
+* () edit: threejs-object3d-position - write more about basic apply euler example
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () edit: threejs-object3d-position - proof read #4 Determ
 * () forpost: threejs-examples-menus - more than one demo of module
-<!-- electionjs fm proto -->
+<!-- Beta World -->
+* () template5: make sample alphas part of the stack
+* () start first guy video
 
 ### () - SUN 11/27/2022
 * (done) edit: threejs-object3d-scale - proof read opening
@@ -54,9 +57,8 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) link to new threejs-examples-curves-module from threejs-buffer-geometry-attributes-position
 * (done) link to new threejs-examples-curves-module from threejs-grouping-mesh-objects
 * (done) link to new threejs-examples-curves-module from curve posts
-<!-- Beta World -->
-* () template5: make sample alphas part of the stack
-* () start first guy video
+* (done) forpost: threejs-object3d-position - new basic example on apply euler
+
 
 <!-------- ----------
 -- WEEK 4
