--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,6 +33,7 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - MON 11/28/2022
 <!-- edit/new -->
 * () edit: threejs-object3d-position - write more about basic apply euler example
+* () edit: threejs-object3d-position - write more about get alpha curve section example
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () edit: threejs-object3d-position - proof read #4 Determ
