--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -31,9 +31,10 @@ POST                                                        CLICKS  IMPRESSIONS
 ## () - WEEK 5 - SUN 11/27/2022 - WED 11/30/2022
 
 ### () - MON 11/28/2022
-* (done) edit: threejs-object3d-position - write more about basic apply euler example
+* (done) edit: threejs-object3d-position - write more about basic apply Euler example
+* (done) edit: threejs-object3d-position - write more about get alpha curve section example
 <!-- edit/new -->
-* () edit: threejs-object3d-position - write more about get alpha curve section example
+
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () edit: threejs-object3d-position - proof read #4 Determ
