--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,12 +33,19 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - MON 11/28/2022
 * (done) edit: threejs-object3d-position - write more about basic apply Euler example
 * (done) edit: threejs-object3d-position - write more about get alpha curve section example
+* (done) edit: threejs-object3d-position - proof read #4 Determ
 <!-- edit/new -->
-* () edit: threejs-object3d-position - proof read #4 Determ
+* () edit: threejs-object3d-position - proof read Conclusion
 
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () forpost: threejs-examples-menus - more than one demo of module
+
+* () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
+* () forpost: threejs-object3d-position - new determ loop example base on video 1 source
+* () forpost: threejs-object3d-position - start a new detrem loop example for video2
+* () edit: threejs-object3d-position - write about new detrem loop examples
+
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
