--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,8 +34,9 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-position - write more about basic apply Euler example
 * (done) edit: threejs-object3d-position - write more about get alpha curve section example
 * (done) edit: threejs-object3d-position - proof read #4 Determ
+* (done) edit: threejs-object3d-position - proof read Conclusion
 <!-- edit/new -->
-* () edit: threejs-object3d-position - proof read Conclusion
+
 
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
