--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -36,16 +36,16 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-position - proof read #4 Determ
 * (done) edit: threejs-object3d-position - proof read Conclusion
 <!-- edit/new -->
+* () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
+* () forpost: threejs-object3d-position - new determ loop example base on video 1 source
+* () forpost: threejs-object3d-position - start a new detrem loop example for video2
+* () edit: threejs-object3d-position - write about new detrem loop examples
+* () videoground-blog-posts - video2 for threejs-object3d-position
 
 
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () forpost: threejs-examples-menus - more than one demo of module
-
-* () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
-* () forpost: threejs-object3d-position - new determ loop example base on video 1 source
-* () forpost: threejs-object3d-position - start a new detrem loop example for video2
-* () edit: threejs-object3d-position - write about new detrem loop examples
 
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
