--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -35,10 +35,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-position - write more about get alpha curve section example
 * (done) edit: threejs-object3d-position - proof read #4 Determ
 * (done) edit: threejs-object3d-position - proof read Conclusion
+* (done) forpost: threejs-object3d-position - new determ loop example base on video 1 source
+* (done) forpost: threejs-object3d-position - start a new detrem loop example for video2
 <!-- edit/new -->
 * () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
-* () forpost: threejs-object3d-position - new determ loop example base on video 1 source
-* () forpost: threejs-object3d-position - start a new detrem loop example for video2
 * () edit: threejs-object3d-position - write about new detrem loop examples
 * () videoground-blog-posts - video2 for threejs-object3d-position
 
