--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -30,6 +30,20 @@ POST                                                        CLICKS  IMPRESSIONS
 ---------- --------->
 ## () - WEEK 5 - SUN 11/27/2022 - WED 11/30/2022
 
+
+### () - WED 11/30/2022
+
+### () - TUE 11/29/2022
+<!-- edit/new -->
+* () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
+* () edit: threejs-object3d-position - write about new detrem loop examples for video1 and video2
+* () for post: threejs-object3d-scale - scale geo example
+* () edit: threejs-object3d-scale - write about new scale geo example
+* () forpost: threejs-examples-menus - more than one demo of module
+<!-- Beta World -->
+* () template5: make sample alphas part of the stack
+* () start first guy video
+
 ### () - MON 11/28/2022
 * (done) edit: threejs-object3d-position - write more about basic apply Euler example
 * (done) edit: threejs-object3d-position - write more about get alpha curve section example
@@ -37,19 +51,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-position - proof read Conclusion
 * (done) forpost: threejs-object3d-position - new determ loop example base on video 1 source
 * (done) forpost: threejs-object3d-position - start a new detrem loop example for video2
-<!-- edit/new -->
-* () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
-* () edit: threejs-object3d-position - write about new detrem loop examples
-* () videoground-blog-posts - video2 for threejs-object3d-position
-
-
-* () for post: threejs-object3d-scale - scale geo example
-* () edit: threejs-object3d-scale - write about new scale geo example
-* () forpost: threejs-examples-menus - more than one demo of module
-
-<!-- Beta World -->
-* () template5: make sample alphas part of the stack
-* () start first guy video
+* (done) videoground-blog-posts - video2 for threejs-object3d-position
 
 ### () - SUN 11/27/2022
 * (done) edit: threejs-object3d-scale - proof read opening
