--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -35,7 +35,6 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - TUE 11/29/2022
 <!-- edit/new -->
-* () edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
 * () edit: threejs-object3d-position - write about new detrem loop examples for video1 and video2
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
@@ -52,6 +51,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) forpost: threejs-object3d-position - new determ loop example base on video 1 source
 * (done) forpost: threejs-object3d-position - start a new detrem loop example for video2
 * (done) videoground-blog-posts - video2 for threejs-object3d-position
+* (done) edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
 
 ### () - SUN 11/27/2022
 * (done) edit: threejs-object3d-scale - proof read opening
