--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -52,6 +52,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) videoground-blog-posts - video2 for threejs-object3d-position
 * (done) edit: threejs-object3d-position - write more about 4.3 determ loop example on curves
 * (done) edit: threejs-object3d-position - write about new detrem loop examples for video1 and video2
+* (done) forpost: new for most folder started for threejs-examples-build-a-box
 
 ### () - SUN 11/27/2022
 * (done) edit: threejs-object3d-scale - proof read opening
