--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -38,6 +38,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () forpost: threejs-examples-menus - more than one demo of module
+* () forpost: new for post folder for threejs-object3d-visible
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
