--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,6 +34,8 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - WED 11/30/2022
 
 ### () - TUE 11/29/2022
+* (done) forpost: threejs-examples-land-sections - start for post folder based off of r125 demo
+* (done) edit: threejs-examples-land-sections - link to new for post folder
 <!-- edit/new -->
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
