--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -36,6 +36,8 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - TUE 11/29/2022
 * (done) forpost: threejs-examples-land-sections - start for post folder based off of r125 demo
 * (done) edit: threejs-examples-land-sections - link to new for post folder
+* (done) forpost: threejs-object3d-visible - start for post folder for this
+* () edit: threejs-object3d-visible - link to for post folder
 <!-- edit/new -->
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
