--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -37,12 +37,10 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) forpost: threejs-examples-land-sections - start for post folder based off of r125 demo
 * (done) edit: threejs-examples-land-sections - link to new for post folder
 * (done) forpost: threejs-object3d-visible - start for post folder for this
-* () edit: threejs-object3d-visible - link to for post folder
+* (done) edit: threejs-object3d-visible - link to for post folder
 <!-- edit/new -->
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
-* () forpost: threejs-examples-menus - more than one demo of module
-* () forpost: new for post folder for threejs-object3d-visible
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
