--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -39,10 +39,11 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) forpost: threejs-object3d-visible - start for post folder for this
 * (done) edit: threejs-object3d-visible - link to for post folder
 * (done) edit: threejs-object3d-visible - proof read opening and getting started
-* () edit: threejs-object3d-visible - proof read #1
+* (done) edit: threejs-object3d-visible - proof read #1
 * () edit: threejs-object3d-visible - proof read #2
 * () edit: threejs-object3d-visible - proof read #3
 * () edit: threejs-object3d-visible - proof read concusion
+* () forpost: threejs-object3d-visible - expand basic section
 <!-- edit/new -->
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
