--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -41,9 +41,9 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-visible - proof read opening and getting started
 * (done) edit: threejs-object3d-visible - proof read #1
 * (done) edit: threejs-object3d-visible - proof read #2
+* (done) edit: threejs-object3d-visible - proof read #3
+* (done) edit: threejs-object3d-visible - proof read concusion
 <!-- edit/new -->
-* () edit: threejs-object3d-visible - proof read #3
-* () edit: threejs-object3d-visible - proof read concusion
 * () forpost: threejs-object3d-visible - expand basic section
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
