--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,10 +43,13 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-visible - proof read #2
 * (done) edit: threejs-object3d-visible - proof read #3
 * (done) edit: threejs-object3d-visible - proof read concusion
+* (done) forpost: threejs-object3d-visible - expand basic section
 <!-- edit/new -->
-* () forpost: threejs-object3d-visible - expand basic section
+* () forpost: threejs-object3d-visible - start first video project for this
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
+<!-- videoground-blog-posts -->
+* () video1 for threejs-object3d-visible
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
