--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,6 +32,9 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 ### () - WED 11/30/2022
+<!-- edit/new -->
+* () edit: threejs-object3d-visible - write about video1 example
+* () edit: threejs-object3d-visible - embed video1 when dome
 
 ### () - TUE 11/29/2022
 * (done) forpost: threejs-examples-land-sections - start for post folder based off of r125 demo
@@ -44,8 +47,8 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-visible - proof read #3
 * (done) edit: threejs-object3d-visible - proof read concusion
 * (done) forpost: threejs-object3d-visible - expand basic section
+* (done) forpost: threejs-object3d-visible - start first video project for this
 <!-- edit/new -->
-* () forpost: threejs-object3d-visible - start first video project for this
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 <!-- videoground-blog-posts -->
