--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -33,8 +33,18 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - WED 11/30/2022
 <!-- edit/new -->
+* () forpost: threejs-face3-color - get examples working
+* () edit: threejs-face3-color - link to forpost, write about updated code examples
 * () edit: threejs-object3d-visible - write about video1 example
 * () edit: threejs-object3d-visible - embed video1 when dome
+<!-- edit/new -->
+* () for post: threejs-object3d-scale - scale geo example
+* () edit: threejs-object3d-scale - write about new scale geo example
+<!-- videoground-blog-posts -->
+* () video1 for threejs-object3d-visible
+<!-- Beta World -->
+* () template5: make sample alphas part of the stack
+* () start first guy video
 
 ### () - TUE 11/29/2022
 * (done) forpost: threejs-examples-land-sections - start for post folder based off of r125 demo
@@ -48,14 +58,6 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) edit: threejs-object3d-visible - proof read concusion
 * (done) forpost: threejs-object3d-visible - expand basic section
 * (done) forpost: threejs-object3d-visible - start first video project for this
-<!-- edit/new -->
-* () for post: threejs-object3d-scale - scale geo example
-* () edit: threejs-object3d-scale - write about new scale geo example
-<!-- videoground-blog-posts -->
-* () video1 for threejs-object3d-visible
-<!-- Beta World -->
-* () template5: make sample alphas part of the stack
-* () start first guy video
 
 ### () - MON 11/28/2022
 * (done) edit: threejs-object3d-position - write more about basic apply Euler example
