--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -32,16 +32,15 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 ### () - WED 11/30/2022
-<!-- edit/new -->
-* () forpost: threejs-face3-color - get examples working
-* () edit: threejs-face3-color - link to forpost, write about updated code examples
-* () edit: threejs-object3d-visible - write about video1 example
-* () edit: threejs-object3d-visible - embed video1 when dome
-<!-- edit/new -->
-* () for post: threejs-object3d-scale - scale geo example
-* () edit: threejs-object3d-scale - write about new scale geo example
+* (done) forpost: threejs-face3-color - get examples working
+* (done) edit: threejs-face3-color - link to forpost, write about updated code examples
 <!-- videoground-blog-posts -->
 * () video1 for threejs-object3d-visible
+<!-- edit/new -->
+* () edit: threejs-object3d-visible - write about video1 example
+* () edit: threejs-object3d-visible - embed video1 when dome
+* () for post: threejs-object3d-scale - scale geo example
+* () edit: threejs-object3d-scale - write about new scale geo example
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
