--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -41,6 +41,7 @@ POST                                                        CLICKS  IMPRESSIONS
 * () edit: threejs-object3d-visible - embed video1 when dome
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
+* () edit: threejs-clock - proof read opening, and gettting started.
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
