--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -37,6 +37,7 @@ POST                                                        CLICKS  IMPRESSIONS
 <!-- videoground-blog-posts -->
 * () video1 for threejs-object3d-visible
 <!-- edit/new -->
+* () figure out what I am going to do for post #1016
 * () edit: threejs-object3d-visible - write about video1 example
 * () edit: threejs-object3d-visible - embed video1 when dome
 * () for post: threejs-object3d-scale - scale geo example
