--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -34,12 +34,14 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - WED 11/30/2022
 * (done) forpost: threejs-face3-color - get examples working
 * (done) edit: threejs-face3-color - link to forpost, write about updated code examples
+* (done) video1 for threejs-object3d-visible
+* (done) edit: threejs-object3d-visible - embed video1 when dome
 <!-- videoground-blog-posts -->
-* () video1 for threejs-object3d-visible
 <!-- edit/new -->
 * () figure out what I am going to do for post #1016
+
 * () edit: threejs-object3d-visible - write about video1 example
-* () edit: threejs-object3d-visible - embed video1 when dome
+
 * () for post: threejs-object3d-scale - scale geo example
 * () edit: threejs-object3d-scale - write about new scale geo example
 * () edit: threejs-clock - proof read opening, and gettting started.
