--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -37,13 +37,11 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) video1 for threejs-object3d-visible
 * (done) edit: threejs-object3d-visible - embed video1 when dome
 * (done) edit: threejs-object3d-visible - write about video1 example
+* (done) for post: threejs-object3d-scale - scale geo example
+* (done) edit: threejs-object3d-scale - write about new scale geo example
 <!-- videoground-blog-posts -->
 <!-- edit/new -->
 * () figure out what I am going to do for post #1016
-
-* () for post: threejs-object3d-scale - scale geo example
-* () edit: threejs-object3d-scale - write about new scale geo example
-
 * () edit: threejs-clock - proof read opening, and getting started.
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
