--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -40,10 +40,9 @@ POST                                                        CLICKS  IMPRESSIONS
 * (done) for post: threejs-object3d-scale - scale geo example
 * (done) edit: threejs-object3d-scale - write about new scale geo example
 * (done) edit: threejs-clock - proof read opening, and getting started.
+* (done) forpost: threejs-clock - have a for post folder and link to it from the post
 <!-- videoground-blog-posts -->
 <!-- edit/new -->
-* () forpost: threejs-clock - have a for post folder and link to it from the post
-* () edit: threejs-clock - proof read rest of post
 * () figure out what I am going to do for post #1016
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
