--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -13,4 +13,13 @@ Have a new set of top posts to focus on
 ---------- --------->
 ## () - WEEK 1 - THU 12/01/2022 - SAT 12/03/2022
 
+### () - FRI 12/02/2022
 * () start post #1016 on threejs-
+
+### () - THU 12/01/2022
+<!-- edit/new -->
+* () figure out what I am going to do for post #1016
+<!-- videoground-blog-posts -->
+<!-- Beta World -->
+* () template5: make sample alphas part of the stack
+* () start first guy video
