--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -18,7 +18,14 @@ Have a new set of top posts to focus on
 
 ### () - THU 12/01/2022
 <!-- edit/new -->
+* () edit: threejs-webglrenderer - proof read opening, and getting started
+
+
 * () figure out what I am going to do for post #1016
+
+* () edit: threejs-object3d-scale - 
+* () edit: threejs-object3d-position - 
+
 <!-- videoground-blog-posts -->
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
