--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -18,7 +18,12 @@ Have a new set of top posts to focus on
 
 ### () - THU 12/01/2022
 <!-- edit/new -->
-* () edit: threejs-webglrenderer - proof read opening, and getting started
+* (done) edit: threejs-webglrenderer - proof read opening, and getting started
+* () forpost: threejs-webglrenderer - start a for post folder for current examples, and update them
+* () edit: threejs-webglrenderer - proof read #1, and #2
+* () edit: threejs-webglrenderer - proof conclusion
+
+* () forpost: threejs-webglrenderer - new basic example on webgl1 thing
 
 
 * () figure out what I am going to do for post #1016
