--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -17,13 +17,14 @@ Have a new set of top posts to focus on
 * () start post #1016 on threejs-
 
 ### () - THU 12/01/2022
-<!-- edit/new -->
 * (done) edit: threejs-webglrenderer - proof read opening, and getting started
-* () forpost: threejs-webglrenderer - start a for post folder for current examples, and update them
-* () edit: threejs-webglrenderer - proof read #1, and #2
-* () edit: threejs-webglrenderer - proof conclusion
+* (done) forpost: threejs-webglrenderer - start a for post folder for current examples, and update them
+* (done) edit: threejs-webglrenderer - proof read #1, and #2
+* (done) edit: threejs-webglrenderer - proof conclusion
+<!-- edit/new -->
 
-* () forpost: threejs-webglrenderer - new basic example on webgl1 thing
+* () forpost: threejs-webglrenderer - new basic example
+* () edit: threejs-webglrenderer - write about new basic example
 
 
 * () figure out what I am going to do for post #1016
