--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -21,10 +21,10 @@ Have a new set of top posts to focus on
 * (done) forpost: threejs-webglrenderer - start a for post folder for current examples, and update them
 * (done) edit: threejs-webglrenderer - proof read #1, and #2
 * (done) edit: threejs-webglrenderer - proof conclusion
+* (done) forpost: threejs-webglrenderer - new basic example
+* (done) edit: threejs-webglrenderer - write about new basic example
 <!-- edit/new -->
 
-* () forpost: threejs-webglrenderer - new basic example
-* () edit: threejs-webglrenderer - write about new basic example
 
 
 * () figure out what I am going to do for post #1016
