--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -23,11 +23,12 @@ Have a new set of top posts to focus on
 * (done) edit: threejs-webglrenderer - proof conclusion
 * (done) forpost: threejs-webglrenderer - new basic example
 * (done) edit: threejs-webglrenderer - write about new basic example
+* (done) figure out what I am going to do for post #1016
+
 <!-- edit/new -->
+* () forpost: start forpost folder on threejs-tetrahedron
 
 
-
-* () figure out what I am going to do for post #1016
 
 * () edit: threejs-object3d-scale - 
 * () edit: threejs-object3d-position - 
