--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -14,6 +14,7 @@ Have a new set of top posts to focus on
 ## () - WEEK 1 - THU 12/01/2022 - SAT 12/03/2022
 
 ### () - FRI 12/02/2022
+* () forpost: threejs-tetrahedron - more on position section
 * () start post #1016 on threejs-
 
 ### () - THU 12/01/2022
@@ -24,12 +25,9 @@ Have a new set of top posts to focus on
 * (done) forpost: threejs-webglrenderer - new basic example
 * (done) edit: threejs-webglrenderer - write about new basic example
 * (done) figure out what I am going to do for post #1016
-
+* (done) forpost: start forpost folder on threejs-tetrahedron
 <!-- edit/new -->
-* () forpost: start forpost folder on threejs-tetrahedron
-
-
-
+* () forpost: threejs-tetrahedron - video1 loop example
 * () edit: threejs-object3d-scale - 
 * () edit: threejs-object3d-position - 
 
