--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -14,8 +14,16 @@ Have a new set of top posts to focus on
 ## () - WEEK 1 - THU 12/01/2022 - SAT 12/03/2022
 
 ### () - FRI 12/02/2022
+<!-- edit/new -->
+* () start post #1016 on threejs-tetrahedron
+* () edit: threejs-object3d-scale - 
 * () forpost: threejs-tetrahedron - more on position section
-* () start post #1016 on threejs-
+<!-- videoground-blog-posts -->
+* () vgbp: threejs-tetrahedron - video1 done
+* () vgbp: threejs-tetrahedron - video1 uploaded and embed
+<!-- Beta World -->
+* () template5: make sample alphas part of the stack
+* () start first guy video
 
 ### () - THU 12/01/2022
 * (done) edit: threejs-webglrenderer - proof read opening, and getting started
@@ -26,12 +34,4 @@ Have a new set of top posts to focus on
 * (done) edit: threejs-webglrenderer - write about new basic example
 * (done) figure out what I am going to do for post #1016
 * (done) forpost: start forpost folder on threejs-tetrahedron
-<!-- edit/new -->
-* () forpost: threejs-tetrahedron - video1 loop example
-* () edit: threejs-object3d-scale - 
-* () edit: threejs-object3d-position - 
-
-<!-- videoground-blog-posts -->
-<!-- Beta World -->
-* () template5: make sample alphas part of the stack
-* () start first guy video
+* (done) forpost: threejs-tetrahedron - video1 loop example
