--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -15,7 +15,8 @@ Have a new set of top posts to focus on
 
 ### () - FRI 12/02/2022
 <!-- edit/new -->
-* () start post #1016 on threejs-tetrahedron
+* (done) start post #1016 on threejs-tetrahedron
+* () forpost: threejs-tetrahedron - make all basic examples static render examples, remove orbit controls
 * () edit: threejs-object3d-scale - 
 * () forpost: threejs-tetrahedron - more on position section
 <!-- videoground-blog-posts -->
