--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -17,6 +17,7 @@ Have a new set of top posts to focus on
 <!-- edit/new -->
 * (done) start post #1016 on threejs-tetrahedron
 * () forpost: threejs-tetrahedron - make all basic examples static render examples, remove orbit controls
+* () forpost: threejs-tetrahedron - regular tetrahedron test should also be used with some addtiona geos
 * () edit: threejs-object3d-scale - 
 * () forpost: threejs-tetrahedron - more on position section
 <!-- videoground-blog-posts -->
