--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -13,16 +13,24 @@ Have a new set of top posts to focus on
 ---------- --------->
 ## () - WEEK 1 - THU 12/01/2022 - SAT 12/03/2022
 
+### () - SAT 12/02/2022
+<!-- edit/new -->
+* () edit: threejs-object3d-scale - 
+
 ### () - FRI 12/02/2022
 <!-- edit/new -->
 * (done) start post #1016 on threejs-tetrahedron
-* () edit: threejs-object3d-scale - 
+* () edit threejs-cone - link to new threejs-tetrahedron post
+* () edit threejs-cylinder - link to new threejs-tetrahedron post
 <!-- videoground-blog-posts -->
 * () vgbp: threejs-tetrahedron - video1 done
 * () vgbp: threejs-tetrahedron - video1 uploaded and embed
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
+
+<!-- edit/new -->
+
 
 ### () - THU 12/01/2022
 * (done) edit: threejs-webglrenderer - proof read opening, and getting started
